test: add unit tests for JwtAuthenticationFilter