@@ -8,6 +8,7 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.lang.NonNull;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -17,7 +18,6 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Component
@@ -33,9 +33,9 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     }
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request,
-                                    HttpServletResponse response,
-                                    FilterChain filterChain) throws ServletException, IOException {
+    protected void doFilterInternal(@NonNull HttpServletRequest request,
+                                    @NonNull HttpServletResponse response,
+                                    @NonNull FilterChain filterChain) throws ServletException, IOException {
         String authHeader = request.getHeader("Authorization");
 
         if (null == authHeader || !authHeader.startsWith("Bearer ")) {
@@ -55,14 +55,15 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             String userID = claims.getSubject();
 
             // Extract roles from claims
+            @SuppressWarnings("unchecked")
             List<String> roleList = claims.get("roles", List.class);
 
             // Convert roles to authorities with ROLE_ prefix if not already present
             List<SimpleGrantedAuthority> authorityList = roleList == null ? List.of() :
                     roleList.stream()
-                            .map(role -> role.startsWith("ROLE_") ? role : "ROLE_" + role)
+                            .map(JwtAuthenticationFilter::withRolePrefix)
                             .map(SimpleGrantedAuthority::new)
-                            .collect(Collectors.toList());
+                            .toList();
 
             if (null != userID && null == SecurityContextHolder.getContext().getAuthentication()) {
                 UsernamePasswordAuthenticationToken authenticationToken = new UsernamePasswordAuthenticationToken(
@@ -80,5 +81,9 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         }
 
         filterChain.doFilter(request, response);
+    }
+
+    private static String withRolePrefix(String role) {
+        return role.startsWith("ROLE_") ? role : "ROLE_" + role;
     }
 }
